# PyTaught

./: README.md  pyproject.toml
.github/: CODEOWNERS.txt
pytaught/: LICENSE  README.md  __init__.py  cli.py  data.py  metrics.py  models.py  optim.py  preprocessing.py  pytaught.py  trainer.py  utils.py  version.py
pytaught/pytaught/: pytaught.py
